test/invalid-syntax/60294_zero_ary_function/zero_ary_function.mag
-- Author: 60294, Pedro Rosa
fun no_args (): Int = 5